# marsupial

./: .README.md.swp  README.md  power_README
client/devel/: .catkin  .rosinstall  setup.sh
client/devel/lib/pkgconfig/: kobuki_capabilities.pc  kobuki_rapps.pc  learning_joy.pc  turtlebot_teleop.pc
client/devel/lib/turtlebot_teleop/: turtlebot_teleop_joy
devel/: .catkin  .rosinstall  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/lib/gscam/: gscam  gscam_node
devel/lib/joy/: joy_node
devel/lib/joy_control/: joy_control
devel/lib/learning_joy/: turtle_teleop_joy
devel/lib/pkgconfig/: gscam.pc  joy.pc  joyControl.pc  joy_control.pc  learning_joy.pc  motor_node.pc  ps3joy.pc  puckdropper.pc  rviz.pc  spacenav_node.pc  using_markers.pc  wiimote.pc
devel/lib/puckdropper/: puckdropper
devel/lib/rviz/: image_view  rviz
devel/lib/using_markers/: basic_shapes
install/: .rosinstall  _setup_util.py
install/lib/joy/: joy_node
install/lib/pkgconfig/: joy.pc  joyControl.pc  rviz.pc
src/joyControl/: CMakeLists.txt  package.xml
src/joyControl/src/: joyControl.cpp
src/joy_control/: CMakeLists.txt  package.xml
src/joy_control/src/: joy_control.cpp
src/learning_joy/: CMakeLists.txt  manifest.xml
src/learning_joy/src/: teleop_turtle_joy.cpp  turtle_teleop_joy.cpp
src/motor_node/: CMakeLists.txt
src/motor_node/scripts/: .listener.py.swp  listener.py
src/puckdropper/: CMakeLists.txt
src/puckdropper/src/: puckdropper.cpp
src/using_markers/: CMakeLists.txt  package.xml
src/using_markers/src/: basic_shapes.cpp
(+24 files in other folders)
